--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -50,7 +50,7 @@ footer a {
   flex-direction: column;
   background: rgba(0,0,0,0.7);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   box-sizing: border-box;
   padding: 1em;
 }
@@ -61,6 +61,7 @@ footer a {
   background-size: 100% auto;
   color: #fff;
 }
+
 .home h1 {
   font-size: calc(10px + 14vmin);
   padding-left: calc(10px + 22vmin);
