Fix nav for smaller screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,7 +14,7 @@ nav.main-nav {
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  padding: 0.5em 0 0.5em 0;
+  padding: 1vmin 0 1vmin 0;
   background-color: rgba(0,0,0,0.3);
 }
 nav.main-nav a {
@@ -24,6 +24,12 @@ nav.main-nav a {
 }
 nav.main-nav a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 600px) {
+  nav.main-nav a {
+    font-size: calc(10px + 1vmin);
+  }
 }
 
 footer {
