Increase footer padding

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -58,7 +58,7 @@ footer a {
   width: 100%;
   min-height: 100%;
   box-sizing: border-box;
-  padding: 1em;
+  padding: 1em 1em 2em 1em;
 }
 /* Home */
 .home {
