--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -311,9 +311,11 @@ div.content-wrapper {
 .type-text:nth-child(2){
   animation: type 2s steps(60, end);
 }
-
 .type-text:nth-child(3){
   animation: type2 4s steps(60, end);
+}
+.type-text:nth-child(4){
+  animation: type3 9s steps(60, end);
 }
 .type-text a {
   color: lime;
@@ -324,9 +326,17 @@ div.content-wrapper {
 } 
 @keyframes type2 {
   0% { width: 0; }
-  50% { width: 0; }
+  33% { width: 0; }
+  66% { width: 100; }
   100% { width: 100; } 
 }
+@keyframes type3 {
+  0% { width: 0; }
+  33% { width: 0; }
+  66% { width: 0; }
+  100% { width: 100; }
+}
+
 /*
 * Pages
 */
