--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -48,7 +48,7 @@ body {
 a {
   color: $link_color;
 }
-h1,h2,h3 {
+h1,h2,h3,h4 {
   font-family: $header_font;
   margin: 0.2em 0;
   text-transform: uppercase;
@@ -61,6 +61,9 @@ h2 {
 }
 h3 {
   font-size: 150%;
+}
+h4 {
+  font-size: 100%;
 }
 header.top-bar {
   align-items: center;
@@ -149,6 +152,33 @@ form button {
   max-width: 100vw;
   min-height: 90vh;
   width: 100%;
+}
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.cards a {
+  text-decoration: none;
+}
+.cards a h4 {
+  text-decoration: underline;
+}
+.cards li {
+  margin: 1vw 3% 0 0;
+  width: 30%;
+}
+.cards li p {
+  font-size: 90%;
+}
+.cards h2 {
+  font-size: 120%;
+}
+.loading i {
+  margin-right: 0.5em;
 }
 
 /*
@@ -388,4 +418,10 @@ article.contact ul {
 }
 article.contact li {
   margin-right: 1em;
+}
+
+@media only screen and (max-width: 700px) {
+  .cards li {
+    width: 47%;
+  }
 }
