--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -383,11 +383,12 @@ div.content-wrapper {
   width: 100%;
 }
 .type-text {
-  margin: 6px 0 0 0;
+  margin: 6px 10px 0 0;
   overflow: hidden;
   padding: 0;
   white-space: nowrap;
   width: 30em;
+  line-height: 1em;
 }
 .type-text:nth-child(2){
   animation: type 2s steps(60, end);
